@@ -20,6 +20,7 @@ Changelog
  * Add {{ block.super }} example to ModelAdmin customisation in documentation (Dan Swain)
  * Add ability to filter image index by a tag (Benedikt Willi)
  * Add formal support for nested InlinePanels (Matt Westcott)
+ * Added cache control headers when serving documents (Johannes Vogel)
  * Fix: Rename documents listing column 'uploaded' to 'created' (LB (Ben Johnston))
  * Fix: Submenu items longer then the page height are no longer broken by the submenu footer (Igor van Spengen)
  * Fix: Unbundle the l18n library as it was bundled to avoid installation errors which have been resolved (Matt Westcott)
